samples/_failures_safe/1761310966_87bbc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1060bb59.c: In function ‘main’:
./samples/SAFE/__tmp_1060bb59.c:141:16: error: missing terminating " character
  141 |         printf("No input
      |                ^~~~~~~~~
./samples/SAFE/__tmp_1060bb59.c:141:9: error: expected expression at end of input
  141 |         printf("No input
      |         ^~~~~~
./samples/SAFE/__tmp_1060bb59.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1060bb59.c:141:9: error: expected declaration or statement at end of input
